# flatcar-ai-gpu-demo-pytorch

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: format.yml  install.yml  lint.yml  package.yml  tests.yml  type_check.yml
src/flatcar_ai_gpu_demo_pytorch/: __init__.py  flatcar_ai_gpu_demo_pytorch.py  llm.py
